# twstock

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  appveyor.yml  flit.ini  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: Makefile  conf.py  contributing.rst  index.rst  license.rst  make.bat  prepare.rst  quickstart.rst  serve.py
docs/reference/: analytics.rst  codes.rst  index.rst  realtime.rst  stock.rst
test/: test_analytics.py  test_cli.py  test_mock.py  test_proxy.py  test_realtime.py  test_stock.py
twstock/: __init__.py  __main__.py  analytics.py  codes.py  franktest.py  goldentest.py  kd.py  legacy.py  proxy.py  realtime.py  stock.py
twstock/cli/: __init__.py  best_four_point.py  realtime.py  stock.py
twstock/codes/: __init__.py  codes.py  fetch.py  tpex_equities.csv  twse_equities.csv
twstock/mock/: __init__.py
