[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "twstock"
author = "Louie Lu"
author-email = "git@louie.lu"
maintainer = "Louie Lu"
maintainer-email = "git@louie.lu"
home-page = "https://github.com/mlouielu/twstock"
requires-python = ">=3.5"
requires = [ "requests",]
description-file = "README.md"
classifiers = [ "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3",]


[tool.flit.scripts]
twstock = "twstock.cli:run"
