[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "twstock"
description = "Taiwan Stock Utility"
authors = [
    {name = "Louie Lu", email = "git@louie.lu"},
]
maintainers = [
    {name = "Louie Lu", email = "git@louie.lu"},
]
requires-python = ">=3.5"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "lxml",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/mlouielu/twstock"
repository = "https://github.com/mlouielu/twstock"

[project.scripts]
twstock = "twstock.cli:run"

[dependency-groups]
dev = [
    "coveralls",
    "codecov",
    "wheel",
    "flit>=3.2.0",
]
