[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "twstock"
description = "Taiwan Stock Utility"
authors = [
    {name = "Louie Lu", email = "git@louie.lu"},
]
maintainers = [
    {name = "Louie Lu", email = "git@louie.lu"},
]
requires-python = ">=3.5"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "lxml",
]
dynamic = ["version"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[project.urls]
homepage = "https://github.com/mlouielu/twstock"
repository = "https://github.com/mlouielu/twstock"

[project.scripts]
twstock = "twstock.cli:run"

[dependency-groups]
dev = [
    "coveralls",
    "codecov",
    "wheel",
]
